--- a/PantryPal/Views/Ingredients/Barcode/BarcodeScanner.storyboard
+++ b/PantryPal/Views/Ingredients/Barcode/BarcodeScanner.storyboard
@@ -25,16 +25,31 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dth-3g-qyA">
+                                        <rect key="frame" x="8" y="49" width="39" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="X6T-Dh-bmm"/>
+                                            <constraint firstAttribute="width" constant="39" id="h2f-Q0-hyb"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="outline_keyboard_arrow_left_black_48pt"/>
+                                        <connections>
+                                            <action selector="dismissAction" destination="Aky-R1-WNs" eventType="touchUpInside" id="ll7-5E-5X5"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGrayColor"/>
                                 <constraints>
-                                    <constraint firstItem="LhT-d4-CBA" firstAttribute="top" secondItem="bH1-jf-lfh" secondAttribute="top" constant="60" id="GG9-fh-Q1L"/>
+                                    <constraint firstItem="Dth-3g-qyA" firstAttribute="top" secondItem="bH1-jf-lfh" secondAttribute="top" constant="49" id="F5h-rx-Giu"/>
                                     <constraint firstAttribute="height" constant="89" id="J4b-eq-IS0"/>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="LhT-d4-CBA" secondAttribute="trailing" constant="20" symbolic="YES" id="qf2-UH-gJb"/>
-                                    <constraint firstItem="LhT-d4-CBA" firstAttribute="leading" secondItem="bH1-jf-lfh" secondAttribute="leading" constant="175" id="ypi-yb-1XC"/>
+                                    <constraint firstItem="LhT-d4-CBA" firstAttribute="top" secondItem="bH1-jf-lfh" secondAttribute="top" constant="60" id="VNf-V2-cxE"/>
+                                    <constraint firstItem="LhT-d4-CBA" firstAttribute="leading" secondItem="bH1-jf-lfh" secondAttribute="leading" constant="175" id="bev-07-gdP"/>
+                                    <constraint firstItem="Dth-3g-qyA" firstAttribute="leading" secondItem="bH1-jf-lfh" secondAttribute="leading" constant="8" id="gum-a2-a2U"/>
+                                    <constraint firstAttribute="trailing" secondItem="LhT-d4-CBA" secondAttribute="trailing" constant="175" id="tzV-6S-Yc7"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.60000002384185791" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No QR code is detected" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CIS-QV-OwA">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No QR code is detected" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CIS-QV-OwA">
                                 <rect key="frame" x="0.0" y="725" width="393" height="40"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -42,12 +57,12 @@
                                     <constraint firstAttribute="height" constant="40" id="ggA-Ax-rFQ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="pjs-IG-gY9"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.55686277149999996" green="0.55686277149999996" blue="0.57647061349999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="CIS-QV-OwA" firstAttribute="leading" secondItem="pjs-IG-gY9" secondAttribute="leading" id="AsB-KV-zwG"/>
                             <constraint firstItem="CIS-QV-OwA" firstAttribute="trailing" secondItem="pjs-IG-gY9" secondAttribute="trailing" id="JF4-xO-3YN"/>
@@ -64,13 +79,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SWh-11-i7S" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="210" y="-39"/>
+            <point key="canvasLocation" x="209.92366412213741" y="-39.436619718309863"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="outline_keyboard_arrow_left_black_48pt" width="48" height="48"/>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
