--- a/PantryPal/Views/Ingredients/CreateFridgeView/CreateFridgeView.xib
+++ b/PantryPal/Views/Ingredients/CreateFridgeView/CreateFridgeView.xib
@@ -4,33 +4,34 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CreateFridgeView" customModule="PantryPal" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="347" height="327"/>
+            <rect key="frame" x="0.0" y="0.0" width="347" height="190"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="card2" translatesAutoresizingMaskIntoConstraints="NO" id="TSb-CU-YQU">
-                    <rect key="frame" x="0.0" y="0.0" width="347" height="327"/>
-                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AQn-9n-ZBB">
+                    <rect key="frame" x="0.0" y="0.0" width="347" height="190"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Yg-x5-VuF">
-                    <rect key="frame" x="123" y="201" width="100" height="32"/>
+                    <rect key="frame" x="123" y="131" width="100" height="32"/>
+                    <color key="backgroundColor" red="0.2823529541" green="0.47843140360000003" blue="0.44313728810000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="4iY-YO-vqz"/>
                         <constraint firstAttribute="height" constant="32" id="qMS-xn-TaQ"/>
                     </constraints>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                    <state key="normal" image="Button圖示１">
-                        <color key="titleColor" systemColor="labelColor"/>
+                    <state key="normal" title="創建" image="outline_note_add_black_24pt">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                 </button>
                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="輸入新創冰箱名稱" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BaQ-3Z-K1y">
-                    <rect key="frame" x="68" y="106" width="210" height="34"/>
-                    <color key="backgroundColor" white="0.91002877331002319" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <rect key="frame" x="68" y="36" width="210" height="34"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="210" id="015-XP-lEv"/>
                         <constraint firstAttribute="height" constant="34" id="ZSp-Pg-TI4"/>
@@ -38,38 +39,31 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="outline_ios_share_black_48pt" translatesAutoresizingMaskIntoConstraints="NO" id="CbF-fp-0Yb">
-                    <rect key="frame" x="160" y="205" width="25" height="20"/>
-                    <color key="tintColor" red="0.28025144340000002" green="0.16780781750000001" blue="0.08490211517" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cHg-Ae-pu6">
                     <rect key="frame" x="6" y="6" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="30" id="1eG-qt-ahU"/>
                         <constraint firstAttribute="height" constant="30" id="ILC-pd-hWZ"/>
                     </constraints>
+                    <color key="tintColor" red="0.2823529541" green="0.47843140360000003" blue="0.44313728810000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                    <state key="normal" image="cross 1"/>
+                    <state key="normal" image="outline_keyboard_arrow_left_black_36pt"/>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="CbF-fp-0Yb" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="160" id="2Vi-Xx-es6"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="TSb-CU-YQU" secondAttribute="trailing" id="6L6-4Q-gD5"/>
+                <constraint firstItem="AQn-9n-ZBB" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="0hs-s0-5bJ"/>
                 <constraint firstItem="BaQ-3Z-K1y" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="68" id="BW4-gi-nCs"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="1Yg-x5-VuF" secondAttribute="bottom" constant="94" id="Jfm-wz-LTY"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="AQn-9n-ZBB" secondAttribute="trailing" id="GUD-9f-olA"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="1Yg-x5-VuF" secondAttribute="bottom" constant="27" id="PCT-jH-XKs"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="AQn-9n-ZBB" secondAttribute="bottom" id="UaN-y2-RGB"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="BaQ-3Z-K1y" secondAttribute="trailing" constant="69" id="UlV-CU-0zd"/>
                 <constraint firstItem="1Yg-x5-VuF" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="123" id="WKd-tC-xRq"/>
                 <constraint firstItem="1Yg-x5-VuF" firstAttribute="top" secondItem="BaQ-3Z-K1y" secondAttribute="bottom" constant="61" id="XZv-EI-Lge"/>
-                <constraint firstItem="TSb-CU-YQU" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="cVk-o0-rfp"/>
                 <constraint firstItem="cHg-Ae-pu6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="6" id="e7z-gl-P9b"/>
-                <constraint firstItem="CbF-fp-0Yb" firstAttribute="top" secondItem="BaQ-3Z-K1y" secondAttribute="bottom" constant="65" id="iVh-Qd-lgN"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="1Yg-x5-VuF" secondAttribute="trailing" constant="124" id="jCZ-dz-i1o"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="CbF-fp-0Yb" secondAttribute="trailing" constant="162" id="lBj-C7-LuW"/>
-                <constraint firstAttribute="bottom" secondItem="TSb-CU-YQU" secondAttribute="bottom" id="mFf-vX-eXM"/>
-                <constraint firstItem="TSb-CU-YQU" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="o1m-yf-mZU"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="CbF-fp-0Yb" secondAttribute="bottom" constant="102" id="ydW-TS-Njf"/>
+                <constraint firstItem="AQn-9n-ZBB" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="kKo-h6-gat"/>
                 <constraint firstItem="cHg-Ae-pu6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="6" id="zmH-wL-dNj"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -78,16 +72,11 @@
                 <outlet property="fridgeNameTextfield" destination="BaQ-3Z-K1y" id="k4J-WA-eTe"/>
                 <outlet property="sendButton" destination="1Yg-x5-VuF" id="8IZ-v7-bWu"/>
             </connections>
-            <point key="canvasLocation" x="-3.8167938931297707" y="-236.26760563380282"/>
+            <point key="canvasLocation" x="-3.8167938931297707" y="-284.50704225352115"/>
         </view>
     </objects>
     <resources>
-        <image name="Button圖示１" width="1947" height="621"/>
-        <image name="card2" width="1920" height="1080"/>
-        <image name="cross 1" width="3532" height="3527"/>
-        <image name="outline_ios_share_black_48pt" width="48" height="48"/>
-        <systemColor name="labelColor">
-            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="outline_keyboard_arrow_left_black_36pt" width="36" height="36"/>
+        <image name="outline_note_add_black_24pt" width="24" height="24"/>
     </resources>
 </document>
