--- a/PantryPal/Views/Ingredients/IngredientsCell/IngredientsTableViewCell.xib
+++ b/PantryPal/Views/Ingredients/IngredientsCell/IngredientsTableViewCell.xib
@@ -28,39 +28,23 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="食材名稱" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VaB-Na-pRs">
-                        <rect key="frame" x="130" y="23" width="210" height="27.666666666666671"/>
+                        <rect key="frame" x="163" y="21" width="188" height="28"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="210" id="htw-rO-Y3G"/>
+                            <constraint firstAttribute="width" constant="188" id="htw-rO-Y3G"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="23"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="價格" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWj-LF-eA7">
-                        <rect key="frame" x="132" y="55" width="125" height="20"/>
+                        <rect key="frame" x="163" y="55.333333333333343" width="188" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="125" id="ijw-8c-pHo"/>
+                            <constraint firstAttribute="width" constant="188" id="ijw-8c-pHo"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="儲存狀態" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F48-hp-VYr">
-                        <rect key="frame" x="258" y="56" width="115" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="115" id="7lt-gN-naE"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="HSm-DE-Anm">
-                        <rect key="frame" x="348" y="23.333333333333329" width="26" height="24.666666666666671"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="26" id="PQh-S0-TMC"/>
-                            <constraint firstAttribute="width" constant="26" id="kHk-xo-qwp"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="3天後過期" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rAw-PD-cGX">
                         <rect key="frame" x="132" y="107" width="236" height="18"/>
                         <constraints>
@@ -70,29 +54,72 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ingredients" translatesAutoresizingMaskIntoConstraints="NO" id="EDw-KQ-cAJ">
+                        <rect key="frame" x="127" y="21" width="30" height="28"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="8o2-cC-7XP"/>
+                            <constraint firstAttribute="height" constant="28" id="d36-7L-4mT"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="儲存狀態" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F48-hp-VYr">
+                        <rect key="frame" x="163" y="81" width="115" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="115" id="7lt-gN-naE"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="HSm-DE-Anm">
+                        <rect key="frame" x="350" y="81" width="26" height="24.666666666666671"/>
+                        <color key="tintColor" red="0.28235294117647058" green="0.47843137254901957" blue="0.44313725490196076" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="26" id="PQh-S0-TMC"/>
+                            <constraint firstAttribute="width" constant="26" id="kHk-xo-qwp"/>
+                        </constraints>
+                    </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="price" translatesAutoresizingMaskIntoConstraints="NO" id="y9K-Pe-IpW">
+                        <rect key="frame" x="127" y="49" width="30" height="28"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="gcY-jZ-DGr"/>
+                            <constraint firstAttribute="height" constant="28" id="sVF-de-LxF"/>
+                        </constraints>
+                    </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="storage" translatesAutoresizingMaskIntoConstraints="NO" id="HvH-kn-rXm">
+                        <rect key="frame" x="128" y="81" width="28" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="24" id="sX3-bF-er9"/>
+                            <constraint firstAttribute="width" constant="28" id="ufW-QX-e5o"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
+                    <constraint firstItem="EDw-KQ-cAJ" firstAttribute="leading" secondItem="Vb0-8p-Djb" secondAttribute="trailing" constant="5" id="3gs-5a-Gl3"/>
                     <constraint firstAttribute="trailing" secondItem="l5S-sR-JUf" secondAttribute="trailing" constant="12" id="4CU-N2-tp8"/>
                     <constraint firstAttribute="bottom" secondItem="rAw-PD-cGX" secondAttribute="bottom" constant="15" id="7F5-8T-XBm"/>
-                    <constraint firstItem="LWj-LF-eA7" firstAttribute="leading" secondItem="Vb0-8p-Djb" secondAttribute="trailing" constant="10" id="8su-ls-Zqx"/>
-                    <constraint firstAttribute="trailing" secondItem="F48-hp-VYr" secondAttribute="trailing" constant="20" symbolic="YES" id="Eff-3F-Kj4"/>
-                    <constraint firstItem="VaB-Na-pRs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="23" id="Ft8-92-ITj"/>
+                    <constraint firstItem="LWj-LF-eA7" firstAttribute="leading" secondItem="Vb0-8p-Djb" secondAttribute="trailing" constant="41" id="8su-ls-Zqx"/>
+                    <constraint firstItem="VaB-Na-pRs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="Ft8-92-ITj"/>
                     <constraint firstItem="l5S-sR-JUf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Gj5-v8-fwK"/>
-                    <constraint firstAttribute="trailing" secondItem="HSm-DE-Anm" secondAttribute="trailing" constant="19" id="MwR-qO-sEe"/>
+                    <constraint firstItem="F48-hp-VYr" firstAttribute="leading" secondItem="HvH-kn-rXm" secondAttribute="trailing" constant="7" id="Kvb-SL-sUr"/>
+                    <constraint firstItem="EDw-KQ-cAJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="MJa-qO-CBs"/>
+                    <constraint firstItem="F48-hp-VYr" firstAttribute="top" secondItem="LWj-LF-eA7" secondAttribute="bottom" constant="5.6666666666666572" id="Mgc-QH-5WM"/>
+                    <constraint firstItem="HvH-kn-rXm" firstAttribute="top" secondItem="y9K-Pe-IpW" secondAttribute="bottom" constant="4" id="OOT-6I-7oi"/>
+                    <constraint firstItem="HSm-DE-Anm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="80" id="TY7-RE-ddt"/>
                     <constraint firstAttribute="trailing" secondItem="rAw-PD-cGX" secondAttribute="trailing" constant="25" id="Uew-O9-W5m"/>
-                    <constraint firstItem="HSm-DE-Anm" firstAttribute="leading" secondItem="VaB-Na-pRs" secondAttribute="trailing" constant="8" symbolic="YES" id="Vca-th-7WP"/>
                     <constraint firstItem="Vb0-8p-Djb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="22" id="WAv-hR-e0j"/>
                     <constraint firstAttribute="bottom" secondItem="Vb0-8p-Djb" secondAttribute="bottom" constant="20" symbolic="YES" id="axz-kx-YfG"/>
-                    <constraint firstItem="F48-hp-VYr" firstAttribute="leading" secondItem="LWj-LF-eA7" secondAttribute="trailing" constant="1" id="deT-6S-40q"/>
-                    <constraint firstItem="rAw-PD-cGX" firstAttribute="top" secondItem="F48-hp-VYr" secondAttribute="bottom" constant="31" id="hmi-YZ-nfd"/>
+                    <constraint firstItem="HvH-kn-rXm" firstAttribute="leading" secondItem="Vb0-8p-Djb" secondAttribute="trailing" constant="6" id="dxC-5d-48r"/>
+                    <constraint firstItem="LWj-LF-eA7" firstAttribute="top" secondItem="EDw-KQ-cAJ" secondAttribute="bottom" constant="6.3333333333333428" id="f87-MS-b5g"/>
+                    <constraint firstAttribute="trailing" secondItem="HSm-DE-Anm" secondAttribute="trailing" constant="17" id="h22-dY-dkz"/>
                     <constraint firstItem="Vb0-8p-Djb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" symbolic="YES" id="jlb-1x-KDK"/>
-                    <constraint firstItem="LWj-LF-eA7" firstAttribute="top" secondItem="VaB-Na-pRs" secondAttribute="bottom" constant="4.3300000000000001" id="kwC-gD-EUZ"/>
-                    <constraint firstItem="F48-hp-VYr" firstAttribute="top" secondItem="VaB-Na-pRs" secondAttribute="bottom" constant="5.3300000000000001" id="pLi-6q-mfZ"/>
+                    <constraint firstItem="y9K-Pe-IpW" firstAttribute="top" secondItem="EDw-KQ-cAJ" secondAttribute="bottom" id="kE3-n3-gUo"/>
+                    <constraint firstItem="LWj-LF-eA7" firstAttribute="top" secondItem="VaB-Na-pRs" secondAttribute="bottom" constant="6.3333333333333428" id="kwC-gD-EUZ"/>
+                    <constraint firstItem="VaB-Na-pRs" firstAttribute="leading" secondItem="EDw-KQ-cAJ" secondAttribute="trailing" constant="6" id="qb9-RP-WMe"/>
+                    <constraint firstItem="y9K-Pe-IpW" firstAttribute="leading" secondItem="Vb0-8p-Djb" secondAttribute="trailing" constant="5" id="qd1-bY-Vjs"/>
                     <constraint firstItem="l5S-sR-JUf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="qx0-c9-8DZ"/>
-                    <constraint firstItem="VaB-Na-pRs" firstAttribute="leading" secondItem="Vb0-8p-Djb" secondAttribute="trailing" constant="8" symbolic="YES" id="rBs-kw-7iL"/>
+                    <constraint firstItem="VaB-Na-pRs" firstAttribute="leading" secondItem="Vb0-8p-Djb" secondAttribute="trailing" constant="41" id="rBs-kw-7iL"/>
                     <constraint firstAttribute="bottom" secondItem="l5S-sR-JUf" secondAttribute="bottom" constant="12" id="ujS-Fr-Rg2"/>
-                    <constraint firstItem="HSm-DE-Anm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="22.329999999999998" id="wMr-Aw-iut"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -110,5 +137,8 @@
     </objects>
     <resources>
         <image name="clock.fill" catalog="system" width="128" height="123"/>
+        <image name="ingredients" width="512" height="512"/>
+        <image name="price" width="512" height="512"/>
+        <image name="storage" width="512" height="512"/>
     </resources>
 </document>
